/* ლუციუს ტარკვინიუს სუპერბუსი */

--- a/რომის_სამეფო.mw
+++ b/რომის_სამეფო.mw
@@ -62,7 +62,7 @@
 
 სერვიუს ტულისის ვერაგი მკვლელობის შემდეგ გამეფდა [[ლუციუს ტარკვინიუს სუპერბუსი]]. იგი დესპოტური და უსამართლო მმართველი იყო, სენატის და ხალხის აზრს სრულიად არ ითვალისწინებდა. იგი არ იყო ცუდი მხედარმთავარი, მაგრამ მისი სამხედრო გეგმებიც ისეთივე ვერაგული იყო როგორც მისი ხასიათი. ქალაქ გაბიასთან ომში მან საკუთარი შვილი, '''სექსტ ტარკვინიუსი''', გაგზავნა მტრის ბანაკში, ვითომ და ახალგაზრდა სექსტი მამას გაექცა. გაბიელებმა დაიჯერეს ეს ამბავი და კარგად მიიღეს სექსტი. მან ინტრიგებით მოახერხა ყველაზე პატივსაცემი მოქალაქეების განდევნა, რის შემდეგაც, რომაელებმა ქალაქი ადვილად დაიკავეს. 
 
-ერთ დღეს ლუციუსის სასახლეში შემოცოცდა გველი, ამ ნიშნის განსამარტად მან გაგზავნა დელფის ორაკულთან თავისი შვილები და ძმისშვილი [[ლუციუს იუნიუსი]], რომესაც '''"ბრუტუსს"''' (სულელს) უწოდებდნენ. ორაკულმა მათ უწინასწარმეტყველა, რომ რომში უზენაეს ძალაუფლებას ის მიიღებს, ვინც პირველი აკოცებს დედას. ტარკვინიუსებმა ეს პირდაპირი მნიშვნელობით გაიგეს, ხოლო ბრუტუსი მიხვდა რომ დედაში მიწა იგულისხმებოდა და აკოცა მიწას.
+ერთ დღეს ლუციუსის სასახლეში შემოცოცდა გველი, ამ ნიშნის განსამარტად მან გაგზავნა დელფის ორაკულთან თავისი შვილები და ძმისშვილი [[ლუციუს იუნიუს ბრუტუსი|ლუციუს იუნიუსი]], რომესაც '''"ბრუტუსს"''' (სულელს) უწოდებდნენ. ორაკულმა მათ უწინასწარმეტყველა, რომ რომში უზენაეს ძალაუფლებას ის მიიღებს, ვინც პირველი აკოცებს დედას. ტარკვინიუსებმა ეს პირდაპირი მნიშვნელობით გაიგეს, ხოლო ბრუტუსი მიხვდა რომ დედაში მიწა იგულისხმებოდა და აკოცა მიწას.
 
 სექსტ ტარკვინიუსის უზნეობა იქამდე მივიდა, რომ მან გააუპატიურა ერთერთი მხედართმთავრის ცოლი, პატივცემული და მაღალგვაროვანი ქალი. ცოლმა ეს ამბავი უამბო თავის მეუღლეს ბრუტუსის თანდასწრებით და თავი მოიკლა. ამ ამბავმა რომაელი ხალხი აღაშფოთა და მათ აჯანყება მოაწყეს, რომელსაც სათავეში ბრუტუსი ჩაუდგა. ამის შემდეგ ტარკვინიუსი იძულებული გახდა [[ეტრურია|ეტრურიაში]] გაქცეულიყო.
 
