--- a/რომის_სამეფო.mw
+++ b/რომის_სამეფო.mw
@@ -11,7 +11,7 @@
 
 ქალაქი [[რომი]] ძვ. წ. VIII საუკუნეში დაარსდა მდინარე [[ტიბრი|ტიბრის]] ნაპირზე პალატინის ბორცვზე. მის დაარსებას უკავშირებელ რომის ლეგენდარულ პირველ მეფეს [[რომულუსი|რომულუსს]]. 
 
-ლეგენდის თანახმად ტყუპები [[რომულუსი|რომულუსი და რემუსი]] დედით იყვნენ ტროადან გამოქცეული გმირი ენეასის ჩამომავლები, ხოლო მათი მამა იყო ომის ღმერთი [[მარსი ღმერთი|მარსი]].
+ლეგენდის თანახმად ტყუპები [[რომულუსი|რომულუსი და რემუსი]] დედით იყვნენ ტროადან გამოქცეული გმირი ენეასის ჩამომავლები, ხოლო მათი მამა იყო ომის ღმერთი [[მარსი (ღმერთი)|მარსი]].
 
 ქალაქის აშენების დროს რემუსმა რომულუსი გააბრაზა, და ამ უკანასკნელმა მოკლა იგი და მარტო დაასრულა ქალაქის მშენებლობა. დამკვიდრებული ტრადიციის მიხედვით ეს [[ძვ. წ. 753]] წელს მოხდა.
 
