--- a/ანკუს_მარციუსი.mw
+++ b/ანკუს_მარციუსი.mw
@@ -2,19 +2,19 @@
 
 ==ბიოგრაფია==
 
-[[ტულუს ჰოსტილიუსი|ტულუს ჰოსტილიუსის]] სიკვდილის შემდეგ სენატორებმა მეფედ [[ნუმა პომპილიუსი|ნუმა პომპილიუსის]] შვილიშვილი ანკუს მარციუსი აირჩიეს. მან გამეფებისთანავე სცადა ბაბუის ადათ-წესების და პოლიტიკის აღორძინება. პონტიფიკუსებს უბრძანა ნუმა პომპილიუსის დარიგებები სახალხო რიტუალების შესახებ გამოექვეყნებინათ.
+[[ტულუს ჰოსტილიუსი|ტულუს ჰოსტილიუსის]] სიკვდილის შემდეგ სენატორებმა მეფედ [[ნუმა პომპილიუსი|ნუმა პომპილიუსის]] შვილიშვილი ანკუს მარციუსი აირჩიეს. მან გამეფებისთანავე სცადა ბაბუის ადათ-წესების და პოლიტიკის აღორძინება. [[პონტიფიკუსი|პონტიფიკუსებს]] უბრძანა ნუმა პომპილიუსის დარიგებები სახალხო რიტუალების შესახებ გამოექვეყნებინათ.
 
-მეზობელმა ლათინებმა ახალი მეფის მშვიდობისკენ მისწრაფება სისუსტედ აღიქვეს და შემოესივნენ რომის მიწებს. ანკუსი მიხვდა რომ ამ სიტუაციაში ნუმასეულ ქცევაზე უფრო გამართლებული იქნებოდა ტულუსის და რომულუსისნაერი ქცევა, მაგრამ მიუხედავად ამ გადაწყვეტილებისა, მან იზრუნა საომარი დროისთვისაც შემოეღო ისეთი რიტუალები, როგორიც მისმა ბაბუამ მშვიდობიანობისთვის შემოიღო.
+მეზობელმა [[ლათინები|ლათინებმა]] ახალი მეფის მშვიდობისკენ მისწრაფება სისუსტედ აღიქვეს და შემოესივნენ რომის მიწებს. ანკუსი მიხვდა რომ ამ სიტუაციაში ნუმასეულ ქცევაზე უფრო გამართლებული იქნებოდა ტულუსის და რომულუსისნაერი ქცევა, მაგრამ მიუხედავად ამ გადაწყვეტილებისა, მან იზრუნა საომარი დროისთვისაც შემოეღო ისეთი რიტუალები, როგორიც მისმა ბაბუამ მშვიდობიანობისთვის შემოიღო.
 
 ამ რიტუალის თანახმად ელჩი როდესაც გადაკვეთდა იმ ქვეყნის საზღვრებს, რომელთანაც უთანხმოება იყო, თავზე შალის თავსაფარს იხურავდა და ამბობდა: "ისმინე იუპოტერო, ისმინეთ ამ ქვეყნის (სახელი) საზღვრებო, დაე შემისმინოს უზენაესმა სამართალმა. მე ვარ მთელი რომაელი ერის მაუწყებელი და პატივის დასაცავად მოვედი ელჩად, დაე დაიჯერეთ ჩემი სიტყვები!". შემდეგ იგი ჩამოთვლიდა ყველა პრეტენზიებს და მოწმედ იუპიტერს მოუხმობდა. იგივეს უმეორებდა იგი პირველ შემხვედრსაც, ქალაქის კარიბჭესთანაც და ქალაქის მთავარ მოედანზე და თუ 30 დღეში მისი პრეტენზიები არ კმაყოფილდებოდა, მაშინ იგი უკვე უცხადებდა ომს, მოწმეებად კი ყველა ღმერთებს უხმობდა. ამის შემდეგ ელჩი ბრუნდებოდა რომში.
 
 რომში კი მეფე იწვევდა სენატს და ეკითხებოდა სენატორებს თუ რითი უნდა ეპასუხებინათ რომის პრეტენზიების დაუკმაყოფილებლობაზე და პასუხი იყო რომ ომი უნდა დაწყებულიყო, ამგვარად სენატი ადასტურებდა ომის გამოცხადებას. ბოლოს კი ადამიანი მიდიოდა მტრის საზღვრებთან და ომის გამოცხადების სიტყვებით ოთხი მოწმის თანხლებით სტყორცნიდა შუბს მტრული სახელმწიფოს საზღვრებში.
 
-ანკუსმა აიღო ლათინთა ქალაქი პოლიტორიუმი და მოსახლეობა რომში გადმოასახლა. მოგვიანებით რომაელებმა აიღეს ტელენი და ფიკანუსი. ბოლოს ლათინებს მხოლოდ ერთი გამაგრებული ქალაქი დარჩათ - მედულიუსი. ამ ქალაქისთვის ბრძოლები დიდხანს გაგრძელდა. საბოლოო ბრძოლა კი ანკუსმა მოუგო და რომში დიდძალი ნადავლით დაბრუნდა. ამ მოვლენების შედეგად რომის გაზდამ მისი ტიბრის მეორე ნაპირზე განფენაც გამოიწვია. მარციუსმა ააშენა ხის ხიდი ტიბრზე და გაამაგრა დასავლეთ ნაპირი.
+ანკუსმა აიღო ლათინთა ქალაქი [[პოლიტორიუმი]] და მოსახლეობა რომში გადმოასახლა. მოგვიანებით რომაელებმა აიღეს [[ტელენი]] და [[ფიკანუსი]]. ბოლოს ლათინებს მხოლოდ ერთი გამაგრებული ქალაქი დარჩათ - [[მედულიუსი]]. ამ ქალაქისთვის ბრძოლები დიდხანს გაგრძელდა. საბოლოო ბრძოლა კი ანკუსმა მოიგო და რომში დიდძალი ნადავლით დაბრუნდა. ამ მოვლენების შედეგად რომის გაზდამ მისი [[ტიბრი|ტიბრის]] მეორე ნაპირზე განფენაც გამოიწვია. მარციუსმა ააშენა ხის ხიდი ტიბრზე და გაამაგრა დასავლეთ ნაპირი.
 
-მოსახლეობის ზრდასთან ერთად გაუარესდა კრიმინალური მდგომარეობაც, ამასთან საბრძოლველათ მეფემ ციხე ააგო. მისი მმათველობის დროს გაიზარდა არა მარტო ქალაქი, არამედ რომის მიწებიც. მეფემ ტიბრის შესართავთან ქ. ოსცია - რომის ნავსადგური ააშენა.
+მოსახლეობის ზრდასთან ერთად გაუარესდა კრიმინალური მდგომარეობაც, ამასთან საბრძოლველათ მეფემ ციხე ააგო. მისი მმათველობის დროს გაიზარდა არა მარტო ქალაქი, არამედ რომის მიწებიც. მეფემ ტიბრის შესართავთან ქ. [[ოსცია]] - რომის ნავსადგური ააშენა.
 
-მისი მმართველობის პერიოდში რომში ეტრუსკი მდიდარი [[ლუციუს ტარკვინიუს პრისკუსი|ლუციუს ტარკვინიუსი]], რომის მომავალი მეფე. იგი მალე გახდა ანკუსის დაახლოვებული პირი და მრჩეველი.
+მისი მმართველობის პერიოდში რომში [[ეტრუსკები|ეტრუსკი]] მდიდარი [[ლუციუს ტარკვინიუს პრისკუსი|ლუციუს ტარკვინიუსი]], რომის მომავალი მეფე. იგი მალე გახდა ანკუსის დაახლოვებული პირი და მრჩეველი.
 
 ანკუს მარციუსმა 24 წელი იმეფა.
 
