*Empty MediaWiki Message*

--- a/ლაციო.mw
+++ b/ლაციო.mw
@@ -1,5 +1,5 @@
 [[Image:Italy Regions Latium Map.png|right|ლაციო]]
-'''ლაციო''' (Lazio) არის რეგიონი ცენტრალური [[იტალია|იტალიის]] დასავლეთ ნაწილში. იგი წარმოადგენს ძველი ლათინების განსახლების არეალს ძვ.წ. X ს-დან. რომაელები ცხოვრობდნენ ძვ.წ. IV ს-დან.
+'''ლაციო''' (Lazio) არის რეგიონი ცენტრალური [[იტალია|იტალიის]] დასავლეთ ნაწილში. იგი წარმოადგენს ძველი [[ლათინები|ლათინების]] განსახლების არეალს ძვ.წ. X ს-დან. რომაელები ცხოვრობდნენ ძვ.წ. IV ს-დან.
 
 
 * ''ფართობი''  - 17.2 ათასი.
