*Empty MediaWiki Message*

--- a/მარსი_(მრავალმნიშვნელოვანი).mw
+++ b/მარსი_(მრავალმნიშვნელოვანი).mw
@@ -1,5 +1,41 @@
+სახელი '''მარსი''' შესაძლებელია ნიშნავდეს:
+
+*[[მარსი (ღმერთი)|მარსი]] - რომაული მითოლოგიით ომის ღმერთი.
+*[[მარსი (პლანეტა)|მარსი]] - მზის სისტემის რიგით მეოთხე პლანეტა.
+
+
+
 {{მრავალმნიშვნელოვანი}}
 
-[[მარსი ღმერთი|მარსი]] - რომაული მითოლოგიით ომის ღმერთი
 
-[[მარსი პლანეტა|მარსი]] - მზის სისტემაში მეოთხე პლანეტა
+[[als:Mars]]
+[[bg:Марс]]
+[[ca:Mart]]
+[[cs:Mars]]
+[[da:Mars]]
+[[de:Mars]]
+[[el:Άρης]]
+[[en:Mars (disambiguation)]]
+[[es:Marte]]
+[[fr:Mars]]
+[[ga:Mars]]
+[[gl:Marte]]
+[[is:Mars (aðgreining)]]
+[[it:Marte]]
+[[la:Mars]]
+[[lt:Marsas]]
+[[mt:Marte]]
+[[nl:Mars]]
+[[nds:Mars]]
+[[ja:マーズ]]
+[[os:Марс]]
+[[pl:Mars (strona ujednoznaczniająca)]]
+[[pt:Marte (desambiguação)]]
+[[ru:Марс (значения)]]
+[[simple:Mars]]
+[[sk:Mars (rozlišovacia stránka)]]
+[[sl:Mars]]
+[[fi:Mars (täsmennyssivu)]]
+[[sv:Mars (olika betydelser)]]
+[[tr:Mars]]
+[[wa:Måss]]
