/* ნუმა პომპილიუსის წარმოშვება */

--- a/ნუმა_პომპილიუსი.mw
+++ b/ნუმა_პომპილიუსი.mw
@@ -4,7 +4,7 @@
 ==ნუმა პომპილიუსის წარმოშვება==
 
 [[სურათი:Numa-pompilius.jpg|thumb|left|ნუმა მუზებს სთხოვს რჩევას]]
-ნუმა პომპილიუსი წარმოშვებით საბინელი იყო ქალაქ კუროსიდან. როგორ პლუტარქე ვგაუწყებს, იგი რომის დაარსების დღეს დაიბადა. მამამისს პომპონიუსს ოთხი ვაჟი ჰყავდა, ნუმა უმცროსი იყო. ზოგი ანტიკური ავტორი ამტკიცებდა რომ იგი [[პითაგორე|პითაგორეს]] მოსწავლე იყო, მაგრამ პითაგორე ნუმაზე 200 წლით გვიან ცხოვრობდა. [[ტიტუს ლივიუსი]] მიიჩნევს რომ ნუმას მაღალი მორალური თვისებების მიღწევად სრულიად არ ესაჭიროებოდა, ვინაიდან საბინელები გამოირჩეოდნენ ზნეობით.
+ნუმა პომპილიუსი წარმოშვებით [[საბინელები|საბინელი]] იყო ქალაქ კუროსიდან. როგორ [[პლუტარქე]] გვაუწყებს, იგი რომის დაარსების დღეს დაიბადა. მამამისს პომპონიუსს ოთხი ვაჟი ჰყავდა, ნუმა უმცროსი იყო. ზოგი ანტიკური ავტორი ამტკიცებდა რომ იგი [[პითაგორე|პითაგორეს]] მოსწავლე იყო, მაგრამ პითაგორე ნუმაზე 200 წლით გვიან ცხოვრობდა. [[ტიტუს ლივიუსი]] მიიჩნევს რომ ნუმას მაღალი მორალური თვისებების მიღწევად სრულიად არ ესაჭიროებოდა განათლების უცხოელ ფილოსოფოსტან მიღება, ვინაიდან საბინელები გამოირჩეოდნენ ზნეობით.
 
 მის ზნეობრივ პრინციპებზე რომულუსის თანამმართველმა [[ტატიუსი|ტატიუსმაც]] შეიტყო და მიათხოვა ნუმას ერთადერთი ქალიშვილი. მიუხედავად ამისა, იგი არ გადასახლდა რომში, რადგან მშვიდი ცხოვრება ერჩივნა. დაქორწინებიდაც 13 წლის შემდეგ ტატია გარდაიცვალა.
 
