*Empty MediaWiki Message*

--- a/იანუსი_(მრავალმნიშვნელოვანი).mw
+++ b/იანუსი_(მრავალმნიშვნელოვანი).mw
@@ -1,1 +1,4 @@
 {{მრავალმნიშვნელოვანი}}
+
+[[იანუსი (ღმერთი)|იანუსი]] - რომაულ მითოლოგიაში ყოველი დაწყების ღმერთი
+[[იანუსი პლანეტა|იანუსი]] - სატურნის თანამგზავრი
