--- a/ნუმა_პომპილიუსი.mw
+++ b/ნუმა_პომპილიუსი.mw
@@ -20,18 +20,18 @@
 
 ==ნუმას მმართველობა==
 
-როდესაც ნუმა რომში ჩამოვიდა, ფორუმზე მოაწყეს კენჭისყრა და ნუმა ერთხმად იქნა არჩეული, მაგრამ ახალი მეფე ამით არ დაკმაყოფილდა, იგი ავიდა კაპიტოლიუმზე და ავგურს სთხოვა ემკითხავა ფრინველების გაფრენით. მკითხაობით დადასტურდა ხალხის არჩევანის მართებულობა და ნუმა გახდა მეფე.
+როდესაც ნუმა რომში ჩამოვიდა, ფორუმზე მოაწყეს კენჭისყრა და ნუმა ერთხმად იქნა არჩეული, მაგრამ ახალი მეფე ამით არ დაკმაყოფილდა, იგი ავიდა კაპიტოლიუმზე და [[ავგურები|ავგურს]] სთხოვა ემკითხავა ფრინველების გაფრენით. მკითხაობით დადასტურდა ხალხის არჩევანის მართებულობა და ნუმა გახდა მეფე.
 
 [[სურათი:Numahead coin.jpg|thumb|ნუმას გამოსახულება მონეტაზე]]
 გამეფების შემდეგ ნუმამ პირველი რაც ჰქნა, დაითხოვა 300 მცველის რაზმი. მას მიაჩნდა რომ სრულიად შეუძლია ენდოს ხალხს, რომელმაც იგი აირჩია.
 
 ამის შემდეგ მან განიძრახა მოელბო რომაელთა რკინის ხასიათი და მიეჩვია ისინი სამართლიანობისთვის, ღვთისმსახურებისთვის და მოწყალებისთვის. ნუმამ იცოდა რომ ეს არ იყო ადვილი ამოცანა, რადგან ახალი ერი ომებში აღმოცენდა და მშვიდობა მათთვის უცხო იყო. ამისთვის მან დააწესა მრავალი რელიგიური დღესასწაული და თვითონ ხელმძღვანელობდა მსხვერპლთშეწირვებს და სხვა რიტუალებს. 
 
-ნუმამ ააგო ღმერთი [[იანუსი|იანუსის]] ტაძარი, რომლის კარიბჭე იღებოდა მხოლოდ ომის დროს და ომის დასრულებისთანახე იხურებოდა. ნუმამ მეზობლბთან მშვიდობა დაამყარა და საზეიმოდ ჩაკეტა ტაძრის კარიბჭე. მისი მმართველობის დროს კასრიბჭე არცერთხელ არ გახსნილა, ხოლო მისი სიკვდილის შემდეგ ძალიან იშვიათად იხურებოდა. ასე რესპუბლიკის პერიოდში იგი მხოლოდ ორჯერ დაიხურა, [[პირველი პუნიკური ომი|პირველი პუნიკური ომის]] შემდეგ ცოტა ხნით და როდესაც ოქტავიანემ დაამარცხა ანტონიუსი.
+ნუმამ ააგო ღმერთი [[იანუსი (ღმერთი)|იანუსის]] ტაძარი, რომლის კარიბჭე იღებოდა მხოლოდ ომის დროს და ომის დასრულებისთანახე იხურებოდა. ნუმამ მეზობლბთან მშვიდობა დაამყარა და საზეიმოდ ჩაკეტა ტაძრის კარიბჭე. მისი მმართველობის დროს კასრიბჭე არცერთხელ არ გახსნილა, ხოლო მისი სიკვდილის შემდეგ ძალიან იშვიათად იხურებოდა. ასე რესპუბლიკის პერიოდში იგი მხოლოდ ორჯერ დაიხურა, [[პირველი პუნიკური ომი|პირველი პუნიკური ომის]] შემდეგ ცოტა ხნით და როდესაც ოქტავიანემ დაამარცხა ანტონიუსი.
 
 ნუმან შექნა [[მთვარის კალენდარი]], წელიწადი დაყო თორმეტ თვეთ, ვინაიდან მთვარის თვეში 30 დღე არაა და წლის შესრულებამდე აკლდებოდა 11 დღე, მან ჩაამატა დამატებითი თვე. წელიწადი 1 მარტს იწყებოდა.
 
-ამის შემდეგ ნუმამ უმაღლესი ქურუმების თანამდებობა შექმნა, მათ პონტიფიკუსები ეწოდებოდათ. მეფეც პონტიფიკუსი იყო. პონტიფიკუსები ემსახურებოდნენ [[იუპიტერი|იუპიტერს]], [[მარსი|მარსს]] და [[რომულუსი|რომულუსის]] კულტებს. მან ასევე დააწესა წმინდა ცეცხლის შენახვის კულტი, წმინდა ცეცხლზე ზრუნვა ვესტას ქალწულ ქურუმებს ევალებოდათ.
+ამის შემდეგ ნუმამ უმაღლესი ქურუმების თანამდებობა შექმნა, მათ პონტიფიკუსები ეწოდებოდათ. მეფეც პონტიფიკუსი იყო. პონტიფიკუსები ემსახურებოდნენ [[იუპიტერი (ღმერთი)|იუპიტერს]], [[მარსი (ღმერთი)|მარსს]] და [[რომულუსი|რომულუსის]] კულტებს. მან ასევე დააწესა წმინდა ცეცხლის შენახვის კულტი, წმინდა ცეცხლზე ზრუნვა ვესტას ქალწულ ქურუმებს ევალებოდათ.
 
 ვესტას ქალწულები ბევრი პრივილეგით სარგებლობდნენ, თუ გზად მათ შემთხვევით სიკვდილმისჯილი შეხვდებოდათ, მაშინ განაჩენი სისრულეში აღარ მოჰყავდათ. თუ ქალწული რამეს დააშავებდა მას პონტიფიკუსი სჯიდა, ხოლო თუ იგი ქალწულობას დაკარგავდა, მას ცოცხლად მარხავდნენ.
 
