--- a/ფრენკ_გერი.mw
+++ b/ფრენკ_გერი.mw
@@ -1,4 +1,4 @@
-[[სურათი:Guggenheim bilbao.JPG|thumb|300px|გერის ყველაზე ცნობილი ნამუშევარი, [[გეგენჰაიმის მუზეუმი (ბილბაო)|გეგენჰაიმის მუზეუმი]], [[ბილბაო]], [[ესპანეთი]]]]
+[[სურათი:Guggenheim bilbao.JPG|thumb|300px|გერის ყველაზე ცნობილი ნამუშევარი, [[გუგენჰაიმის მუზეუმი (ბილბაო)|გუგენჰაიმის მუზეუმი]], [[ბილბაო]], [[ესპანეთი]]]]
 '''ფრენკ ოუვენ გერი''' (Frank Owen Gehry) (დაბადბით ''ეფრაიმ გოლდბერგი'', [[28 თებერვალი]], [[1929]]) არქიტექტორია ცნობილი შენობათა დიზაინის სკულპტურული გადაწყვეტის სტილით. მისი ყველაზე ცნობილი შენობები გამოირჩევა მორკალული სტრუქტურებით, როგორც წესი, დაფარული ამრეკლი ლითონის ფირფიტებით. მისი საყოველთაოდ ცნობილი ნამუშევარი და მისი სტილის ყველაზე თვლასაჩინო მაგალითია გუგენჰაიმის მუზეუმი ბილბაოში, ესპანეთი, რომლის ზედაპირი თითქმის მთლიანად ტიტანის ფირფიტებითაა დაფარული.
 
 ==ნამუშევრები==
