--- a/სერვიუს_ტულიუსი.mw
+++ b/სერვიუს_ტულიუსი.mw
@@ -37,7 +37,7 @@
 
 კურიაში სენატორთა თანდასწრებით დაიწყო სერვიუს ტულიუსის ლანძღვა. ამ დროს სერვიუსი თვითონ გამოცხადდა კურიაში. სერვიუსისა და ტარკვინიუსის მომხრეებს შორის ხელჩართული ბრძოლა გაიმართა. თვითონ ტარკვინიუსი ეცა სერვიუსს, და ვინაიდან იგი ბევრად უმცროსი და ძლიერი იყო, ჩამოაგდო მეფე კიბიდან, შემდეგ კი ქუჩაში თავისი მომხრეები დააწია და მოაკვლევინა მეფე.
 
-როგორც ისტორიკოსი გვამცნობებს, ამის შემდეგ ტულია ეტლით მივიდა კურიასთან და ქმარს უწოდა მეფე, ხოლო სახლში დაბრუნებისას ქუჩაში მამის გვამი დაინახა და ეტლით ზედ გადაუარა. მ ქუჩას რომაელებმა წყეული ქუჩა უწოდეს.
+როგორც ისტორიკოსი გვამცნობებს, ამის შემდეგ ტულია ეტლით მივიდა კურიასთან და ქმარს უწოდა მეფე, ხოლო სახლში დაბრუნებისას ქუჩაში მამის გვამი დაინახა და ეტლით ზედ გადაუარა. ამ ქუჩას რომაელებმა წყეული ქუჩა უწოდეს.
 
 ამრიგად სერვიუს ტულიუსმა 44 წელი იმეფა, მასთან ერთად დაიღუპა სამართლიანი სამეფო ხელისუფლება, რამაც კიდევ უფრო გაზარდა მისი დიდება სიკვდილის შემდეგ.
 
