*Empty MediaWiki Message*

--- a/რომაული_კალენდარი.mw
+++ b/რომაული_კალენდარი.mw
@@ -1,4 +1,8 @@
+რომის დაარსებიდან მის დაცემამდე კალენდარული სისტემა რამდენიმეჯერ იქნა შეცვლილი
 
+[[მთვარის კალენდარი|მთვარის კალენდრის]] შემოღებას ტრადიციულად [[ნუმა პომპილიუსი|ნუმა პომპილიუს]] მიაწერენ.
+
+თავდაპირველად წელიწადში ათი თვე იყო, წელი [[მარტი|მარტით]] იწყებოდა და დეკემბრით სრულდებოდა. მოგვიანებით 
 
 [[კატეგორია:ძველი რომი]]
 [[კატეგორია:კალენდარი]]
