*Empty MediaWiki Message*

--- a/რომაული_კალენდარი.mw
+++ b/რომაული_კალენდარი.mw
@@ -1,8 +1,27 @@
 რომის დაარსებიდან მის დაცემამდე კალენდარული სისტემა რამდენიმეჯერ იქნა შეცვლილი
 
+==უძველესი კალენდარი==
+
+წელიწადი იწყებოდა [[21 მარტი|21 მარტს]], როდესაც დღე და ღამე ტოლია. წელიწადში იყო ათი თვე:
+
+* Martius (31 დღე)
+* Aprilis (30 დღე)
+* Maius (31 დღე)
+* Junius (30 დღე)
+* Quintilis (31 დღე)
+* Sextilis (30 დღე)
+* September (30 დღე)
+* October (31 დღე)
+* November (30 დღე)
+* December (30 დღე)
+
+
+
 [[მთვარის კალენდარი|მთვარის კალენდრის]] შემოღებას ტრადიციულად [[ნუმა პომპილიუსი|ნუმა პომპილიუს]] მიაწერენ.
 
-თავდაპირველად წელიწადში ათი თვე იყო, წელი [[მარტი|მარტით]] იწყებოდა და დეკემბრით სრულდებოდა. მოგვიანებით 
+თავდაპირველად წელიწადში ათი თვე იყო, წელი [[მარტი|მარტით]] იწყებოდა და დეკემბრით სრულდებოდა.
+
+* 
 
 [[კატეგორია:ძველი რომი]]
 [[კატეგორია:კალენდარი]]
