--- a/რომაული_კალენდარი.mw
+++ b/რომაული_კალენდარი.mw
@@ -15,11 +15,13 @@
 * November (30 დღე)
 * December (30 დღე)
 
+ამტიგად წელიწადში 304 დღე ივსებოდა, მაგრამ რჩებოდა 61 დღე, რომელიც კალენდარში არ ჯდებოდა. 
+
+==[[ნუმა პომპილიუსი|ნუმა პომპილიუსის]] კალენდრის რეფორმა==
+
+[[მთვარის კალენდარი|მთვარის კალენდრის]] შემოღებას ტრადიციულად ნუმა პომპილიუს მიაწერენ. 30 დღიანი თვეები 29 დღემდე შეიკვეცა და წლის ბოლოს ორი თვე დაემატა: 29 დღიანი Ianuarius ღმერთ [[იანუსი (ღმერთი)|იანუსის]] საპატივცემლოდ და Februarius 28 დღით, რაც განწმენდას ნიშნავს. მიუხედავად ამისა 10 დღე მაინც კალენდარგარეთ დარჩა. ამის ამოსავსებად დამატებით თვეს იყენებდნენ ('''Mensis Intercalaris''') 
 
 
-[[მთვარის კალენდარი|მთვარის კალენდრის]] შემოღებას ტრადიციულად [[ნუმა პომპილიუსი|ნუმა პომპილიუს]] მიაწერენ.
-
-თავდაპირველად წელიწადში ათი თვე იყო, წელი [[მარტი|მარტით]] იწყებოდა და დეკემბრით სრულდებოდა.
 
 * 
 
