*Empty MediaWiki Message*

--- a/ტროა.mw
+++ b/ტროა.mw
@@ -1,7 +1,7 @@
 [[სურათი:troywall.jpg|thumb|300px|გათხრებით აღმოჩენილი ქალაქის გალავნის ფრაგმენტები.]]
 '''ტროა''' (ბერძ.: Τροία ან Τροάς, ასევე Ήλιον; ლათ: Troia, Ilium) ლეგენდარული ქალაქი, აღწერილი ტროას ომის ციკლში, [[ილიადა|ილიადაში]], [[ჰომეროსი|ჰომეროსის]] ძველ ბერძნულ ეპოსში.
 
-ტროა (Truva, Hissarlik 39°58′N 26°13′E) ასევე არქეოლოგიური მიდამოა [[ანატოლია|ანატოლიაში]], ჰომეროსის მიერ არწერილ ადგილას ზღვის პირას დარდანელის სრუტის სამხრეთ დასავლეთში მთა იდას ქვეშ.
+ტროა (Truva, Hissarlik 39°58′N 26°13′E) ასევე არქეოლოგიური მიდამოა [[ანატოლია|ანატოლიაში]], ჰომეროსის მიერ აღწერილ ადგილას ზღვის პირას [[დარდანელი|დარდანელის]] სრუტის სამხრეთ დასავლეთში მთა იდას ქვეშ.
 
 ახალი ქალაქი [[ილიუმი]] დაფუძნდა ლეგენდარული ილიონის (ტროა) ადგილას რომის იმპერატორი [[ავგუსტუსი|ავგუსტუსის]] მმართველობის პერიოდში. ხელსაყრელი მდებარეობის წყალობით ქალაქი საკმაოდ მდიდარი იყო, თუმცა [[კონსტანტინეპოლი|კონსტანტინეპოლის]] დაარსების შემდეგ, [[ბიზანტია|ბიზანტიის]] პერიოდში, ის თანდათან დაკნინდა.
 
