--- a/რომაული_კალენდარი.mw
+++ b/რომაული_კალენდარი.mw
@@ -26,3 +26,25 @@
 
 [[კატეგორია:ძველი რომი]]
 [[კატეგორია:კალენდარი]]
+
+
+[[da:Romersk kalender]]
+[[de:Kalender (Römisches Reich)]]
+[[en:Roman calendar]]
+[[es:Calendario romano]]
+[[fr:Calendrier romain]]
+[[he:לוח השנה הרומי]]
+[[hr:Rimski kalendar]]
+[[io:Romana kalendario]]
+[[it:Calendario romano]]
+[[la:Calendarium Romanum]]
+[[lt:Romėnų kalendorius]]
+[[nl:Romeinse kalender]]
+[[ja:ローマ暦]]
+[[no:Romersk kalender]]
+[[pl:Kalendarz rzymski]]
+[[ru:Римский календарь]]
+[[sl:Rimski koledar]]
+[[sr:Римски календар]]
+[[fi:Roomalainen kalenteri]]
+[[sv:Romerska kalendern]]
