--- a/X_საუკუნე.mw
+++ b/X_საუკუნე.mw
@@ -1,5 +1,10 @@
+'''''ათწლეულები და წლები'''''
+----
+
+{|border=0 cellspacing=3 cellpadding=5 width=60%
+
 |- bgcolor=#CDB38B
-|colspan=11 align="center"|[[X საუკუნე]] - [[XI საუკუნე]] - [[XII საუკუნე]]
+|colspan=11 align="center"|[[IX საუკუნე]] - [[X საუკუნე]] - [[XI საუკუნე]]
 |- bgcolor=#F7F5D3
 !900-იანი:
 |[[901]]
