--- a/IX_საუკუნე.mw
+++ b/IX_საუკუნე.mw
@@ -4,7 +4,7 @@
 {|border=0 cellspacing=3 cellpadding=5 width=60%
 
 |- bgcolor=#CDB38B
-|colspan=11 align="center"|[[XVIII საუკუნე]] - [[XI საუკუნე]] - [[X საუკუნე]]
+|colspan=11 align="center"|[[VIII საუკუნე]] - [[XI საუკუნე]] - [[X საუკუნე]]
 |- bgcolor=#F7F5D3
 !800-იანი:
 |[[801]]
