--- a/რომაული_კალენდარი.mw
+++ b/რომაული_კალენდარი.mw
@@ -26,6 +26,11 @@
  
 ==დღეები==
 
+თვის დღეების აღნიშვნა რომაელებს მთვარის ფაზებთან ჰქონდათ დაკავშირებული.
+
+* კალენდები - თვის პირველი რიცხვი, (Kalendae ან Calendae) თავდაპირველად ეს ახალი მთვარის პირველი დღე იყო, რომლის სესახებაც დიდი პონტიფიკუსი ატყობინებდა ხალხს.
+* ნონები - თვის მეხუთე ან მეშვიდე დღე. ნახევარმთვარის პირველი დღე.
+* იდები - თვის მეცამეტე ან მეთხუთმეტე დღე. ტრადიციულად ე ახალი მთვარის პირველი დღე იყო.
 
 [[კატეგორია:ძველი რომი]]
 [[კატეგორია:კალენდარი]]
