--- a/რომაული_კალენდარი.mw
+++ b/რომაული_კალენდარი.mw
@@ -32,6 +32,23 @@
 * ნონები - თვის მეხუთე ან მეშვიდე დღე. ნახევარმთვარის პირველი დღე.
 * იდები - თვის მეცამეტე ან მეთხუთმეტე დღე. ტრადიციულად ე ახალი მთვარის პირველი დღე იყო.
 
+თვის დანარჩენი დღეები გადაითვლებოდა კალენდებიდან, ნონებიდან ან იდებიდან. "დღით ადრე" ლათინულად არის ante diem შემოკლებილად a.d. ხოლო უშუალოდ წინა დღე pridie. რომაული თარიღები ასე უნდა იქნას წაკითხული:
+
+* Kal. Sept. = სექტემბრის კალენდები (1 სექტემბერი)
+* a.d. IV Non. Sept. = სექტემბრის ნონებამდე 4 დღე (2 სექტემბერი)
+* a.d. III Non. Sept. = სექტემბრის ნონებამდე 3 დღე (3 სექტემბერი)
+* prid. Non. Sept. = სექტემბრის ნონების წინა დღე (4 სექტემბერი)
+* Non. Sept. = Nones of September = სექტემბრის ნონები (5 სექტემბერი)
+* a.d. VIII Id. Sept. = სექტემბრის იდებამდე 8 დღე (6 სექტემბერი)
+* a.d. VII Id. Sept. = სექტემბრის იდებამდე 7 დღე (7 სექტემბერი)
+* a.d. VI Id. Sept. = სექტემბრის იდებამდე 6 დღე (8 სექტემბერი)
+* a.d. V Id. Sept. = სექტემბრის იდებამდე 5 დღე (9 სექტემბერი)
+* a.d. IV Id. Sept. = სექტემბრის იდებამდე 4 დღე (10 სექტემბერი)
+* a.d. III Id. Sept. = სექტემბრის იდებამდე 3 დღე (11 სექტემბერი)
+* a.d. II Id. Sept. = სექტემბრის იდებამდე 2 დღე (12 სექტემბერი)
+* Id. Sept. = სექტემბრის იდებამდე 1 დღე (13 სექტემბერი)
+
+
 [[კატეგორია:ძველი რომი]]
 [[კატეგორია:კალენდარი]]
 
