--- a/რომაული_კალენდარი.mw
+++ b/რომაული_კალენდარი.mw
@@ -38,7 +38,7 @@
 * a.d. IV Non. Sept. = სექტემბრის ნონებამდე 4 დღე (2 სექტემბერი)
 * a.d. III Non. Sept. = სექტემბრის ნონებამდე 3 დღე (3 სექტემბერი)
 * prid. Non. Sept. = სექტემბრის ნონების წინა დღე (4 სექტემბერი)
-* Non. Sept. = Nones of September = სექტემბრის ნონები (5 სექტემბერი)
+* Non. Sept. = სექტემბრის ნონები (5 სექტემბერი)
 * a.d. VIII Id. Sept. = სექტემბრის იდებამდე 8 დღე (6 სექტემბერი)
 * a.d. VII Id. Sept. = სექტემბრის იდებამდე 7 დღე (7 სექტემბერი)
 * a.d. VI Id. Sept. = სექტემბრის იდებამდე 6 დღე (8 სექტემბერი)
@@ -46,7 +46,14 @@
 * a.d. IV Id. Sept. = სექტემბრის იდებამდე 4 დღე (10 სექტემბერი)
 * a.d. III Id. Sept. = სექტემბრის იდებამდე 3 დღე (11 სექტემბერი)
 * a.d. II Id. Sept. = სექტემბრის იდებამდე 2 დღე (12 სექტემბერი)
-* Id. Sept. = სექტემბრის იდებამდე 1 დღე (13 სექტემბერი)
+* prid. Id. Sept. = სექტემბრის იდებამდე 1 დღე (13 სექტემბერი)
+* Id. Sept. = სექტემბრის იდები (14 სექტემბერი)
+* a.d. XVII Kal. Oct. = ოქტომბრის კალენდებამდე 7 დღე (15 სექტემბერი) და ა.შ.
+* Kal. Oct. = ოქტომბრის კალენდები
+
+გაითვალისწინეთ, მაშინ სექტემბერში 29 დღე იყო.
+
+
 
 
 [[კატეგორია:ძველი რომი]]
