--- a/რომაული_კალენდარი.mw
+++ b/რომაული_კალენდარი.mw
@@ -55,7 +55,9 @@
 
 ==კვირის დღეები==
 
-ძველ რომში ეტრუსკული 8 დღიანი კვირა იყო. ყოველ მერვე დღეს ქალაქებში ამართებოდა ბაზრობები, ხოლო თუ "ბაზრის დღე" რაიმე დღესასწაულს ემთხვეოდა, მაშინ პონტიფიკუსს იგი გადაქჰჰონდა. კვირის დღეები კალენდარში ლათინური ასოებით აღინიშნებოდა A-H.
+ძველ რომში ეტრუსკული 8 დღიანი კვირა იყო. ყოველ მერვე დღეს ქალაქებში ამართებოდა ბაზრობები, ხოლო თუ "ბაზრის დღე" რაიმე დღესასწაულს ემთხვეოდა, მაშინ პონტიფიკუსს იგი გადაჰქონდა. კვირის დღეები კალენდარში ლათინური ასოებით აღინიშნებოდა A-H.
+
+==წლების ათვლა==
 
 [[კატეგორია:ძველი რომი]]
 [[კატეგორია:კალენდარი]]
