--- a/რომაული_კალენდარი.mw
+++ b/რომაული_კალენდარი.mw
@@ -59,6 +59,8 @@
 
 ==წლების ათვლა==
 
+რესპუბლიკის პერიოდში რომაელებს არ ჰქონდათ წლების ათვლის სისტემა. წლებს არქმევდნენ კონსულების სახელებს. (იხ. [[რომაელ კონსულთა სია]])
+
 [[კატეგორია:ძველი რომი]]
 [[კატეგორია:კალენდარი]]
 
