--- a/რომაული_კალენდარი.mw
+++ b/რომაული_კალენდარი.mw
@@ -59,7 +59,8 @@
 
 ==წლების ათვლა==
 
-რესპუბლიკის პერიოდში რომაელებს არ ჰქონდათ წლების ათვლის სისტემა. წლებს არქმევდნენ კონსულების სახელებს. (იხ. [[რომაელ კონსულთა სია]])
+რესპუბლიკის პერიოდში რომაელებს არ ჰქონდათ წლების ათვლის სისტემა. წლებს არქმევდნენ კონსულების სახელებს (იხ. [[რომაელ კონსულთა სია]]). მაგალითად ძვ. წ. 413 წელი იყო ''აულუს მარკუს კორნელიუს კოსუსის და ლუციუს ფურიუს ლ.ფ. მედულინუსის კონსულობის წელი''.
+
 
 [[კატეგორია:ძველი რომი]]
 [[კატეგორია:კალენდარი]]
