--- a/V_საუკუნე.mw
+++ b/V_საუკუნე.mw
@@ -4,7 +4,7 @@
 {|border=0 cellspacing=3 cellpadding=5 width=60%
 
 |- bgcolor=#CDB38B
-|colspan=11 align="center"|[[XIV საუკუნე]] - [[XV საუკუნე]] - [[XVI საუკუნე]]
+|colspan=11 align="center"|[[IV საუკუნე]] - [[V საუკუნე]] - [[VI საუკუნე]]
 |- bgcolor=#F7F5D3
 !400-იანი:
 |[[401]]
