*Empty MediaWiki Message*

--- a/V_საუკუნე.mw
+++ b/V_საუკუნე.mw
@@ -132,10 +132,9 @@
 '''''საუკუნის უმნიშვნელოვანესი მოვლენები'''''
 ----
 
-* [[401]] -
-* [[402]] - 
-...
-* [[498]] -
+* [[410]] - [[რომის იმპერია|რომი]] გოთებმა აიღეს
+* [[455]] - [[რომის იმპერია|რომი]] ვანდალებმა აიღეს
+* [[476]] - [[რომის იმპერია|რომის იმპერიამ]] შეწყვიტა არსებობა
 * [[499]] -
 
 
