--- a/რომის_იმპერია.mw
+++ b/რომის_იმპერია.mw
@@ -395,7 +395,7 @@
 
 ==ლიტერატურა==
 
-* [[პლუტარქოსი]] - შედარებითი ბიოგრაფიები
+* [[პლუტარქე]] - შედარებითი ბიოგრაფიები
 * [[გაიუს სვეტონიუს ტრანკვილუსი]] - 12 კეისარის ცხოვრება
 * [[პუბლიუს კორნელიუს ტაციტუსი]] - ანლები
 * რომის იმპერიის ისტორია (მინსკი 2000)
