*Empty MediaWiki Message*

--- a/IV_საუკუნე.mw
+++ b/IV_საუკუნე.mw
@@ -4,7 +4,7 @@
 {|border=0 cellspacing=3 cellpadding=5 width=60%
 
 |- bgcolor=#CDB38B
-|colspan=11 align="center"|[[XIII საუკუნე]] - [[XIV საუკუნე]] - [[XV საუკუნე]]
+|colspan=11 align="center"|[[III საუკუნე]] - [[IV საუკუნე]] - [[V საუკუნე]]
 |- bgcolor=#F7F5D3
 !300-იანი:
 |[[301]]
