*Empty MediaWiki Message*

--- a/ძვ._წ._I_საუკუნე.mw
+++ b/ძვ._წ._I_საუკუნე.mw
@@ -4,7 +4,7 @@
 {|border=0 cellspacing=3 cellpadding=5 width=60%
 
 |- bgcolor=#CDB38B
-|colspan=11 align="center"|[[ძვ. წ. ძვ. წ. II საუკუნე]] - [[ძვ. წ. I საუკუნე]] - [[I საუკუნე]]
+|colspan=11 align="center"|[[ძვ. წ. II საუკუნე]] - [[ძვ. წ. I საუკუნე]] - [[I საუკუნე]]
 |- bgcolor=#F7F5D3
 !-იანი:
 |[[ძვ. წ. 1]]
