--- a/რომის_სენატი.mw
+++ b/რომის_სენატი.mw
@@ -1,1 +1,2 @@
+[[სურათი:Senat_rom.jpg|thumb|ციცერონის გამოსვლა სენატის წინაშე]]
 '''რომის სენატი''' (''[[ლათინური ენა|ლათინურად]] - Senatus'') იყო რომის რესპუბლიკის და იმპერიის პრიოდში მთავარი საკანონმდებლო ორგანო. სიტყვა senex ნათინურად ნიშნავს უხუცესს. თავდაპირველად სენატი სწორედ უხუცესთა საბჭო იყო, ხოლო მოგვიანებით მას ბევრად ფართო მნიშვნელობა შეეძინა.
