*Empty MediaWiki Message*

--- a/რომის_სენატი.mw
+++ b/რომის_სენატი.mw
@@ -1,2 +1,18 @@
-[[სურათი:Senat_rom.jpg|thumb|ციცერონის გამოსვლა სენატის წინაშე]]
+[[სურათი:Senat_rom.jpg|thumb|300px|ციცერონის გამოსვლა სენატის წინაშე]]
 '''რომის სენატი''' (''[[ლათინური ენა|ლათინურად]] - Senatus'') იყო რომის რესპუბლიკის და იმპერიის პრიოდში მთავარი საკანონმდებლო ორგანო. სიტყვა senex ნათინურად ნიშნავს უხუცესს. თავდაპირველად სენატი სწორედ უხუცესთა საბჭო იყო, ხოლო მოგვიანებით მას ბევრად ფართო მნიშვნელობა შეეძინა.
+
+
+[[de:Römischer_Senat]]
+[[en:Roman Senate]]
+[[es:Senado romano]]
+[[eu:Erromako Senatua]]
+[[fi:Rooman senaatti]]
+[[fr:Sénat romain]]
+[[he:הסנאט הרומי]]
+[[ja:元老院 (ローマ)]]
+[[la:Senatus]]
+[[nl:Senaat (Rome)]]
+[[no:Det romerske senatet]]
+[[pl:Senat rzymski]]
+[[pt:Senado romano]]
+[[zh:羅馬元老院]]
