*Empty MediaWiki Message*

--- a/რომის_სენატი.mw
+++ b/რომის_სენატი.mw
@@ -1,6 +1,17 @@
 [[სურათი:Senat_rom.jpg|thumb|300px|ციცერონის გამოსვლა სენატის წინაშე]]
-'''რომის სენატი''' (''[[ლათინური ენა|ლათინურად]] - Senatus'') იყო რომის რესპუბლიკის და იმპერიის პრიოდში მთავარი საკანონმდებლო ორგანო. სიტყვა senex ნათინურად ნიშნავს უხუცესს. თავდაპირველად სენატი სწორედ უხუცესთა საბჭო იყო, ხოლო მოგვიანებით მას ბევრად ფართო მნიშვნელობა შეეძინა.
+'''რომის სენატი''' (''[[ლათინური ენა|ლათინურად]] - Senatus'') იყო რომის რესპუბლიკის და იმპერიის პრიოდში მართვის მნიშვნელოვანი ორგანო. სიტყვა senex ნათინურად ნიშნავს უხუცესს. თავდაპირველად სენატი სწორედ უხუცესთა საბჭო იყო, ხოლო მოგვიანებით მას ბევრად ფართო მნიშვნელობა შეეძინა.
 
+==ისტორია==
+
+===მეფობის პერიოდი===
+
+===რესპუბლიკა===
+
+===იმპერია===
+
+==განაწესი==
+
+==
 
 [[de:Römischer_Senat]]
 [[en:Roman Senate]]
