*Empty MediaWiki Message*

--- a/რომის_სენატი.mw
+++ b/რომის_სენატი.mw
@@ -11,7 +11,8 @@
 
 ==განაწესი==
 
-==
+[[კატეგორია:ძველი რომი]]
+[[კატეგორია:რომის სახელმწიფო ინსტიტუტები]]
 
 [[de:Römischer_Senat]]
 [[en:Roman Senate]]
