--- a/რომის_სამეფო.mw
+++ b/რომის_სამეფო.mw
@@ -9,15 +9,15 @@
 
 ==რომის დაარსება==
 
-ქალაქი [[რომი]] ძვ. წ. VIII საუკუნეში დაარსდა მდინარე [[ტიბრი|ტიბრის]] ნაპირზე პალატინის ბორცვზე. მის დაარსებას უკავშირებელ რომის ლეგენდარულ პირველ მეფეს [[რომულუსი|რომულუსს]]. 
+ქალაქი [[რომი]] ძვ. წ. VIII საუკუნეში დაარსდა მდინარე [[ტიბრი|ტიბრის]] ნაპირზე, პალატინის ბორცვზე. მის დაარსებას უკავშირებენ რომის ლეგენდარულ პირველ მეფეს [[რომულუსი|რომულუსს]]. 
 
 ლეგენდის თანახმად ტყუპები [[რომულუსი|რომულუსი და რემუსი]] დედით იყვნენ ტროადან გამოქცეული გმირი ენეასის ჩამომავლები, ხოლო მათი მამა იყო ომის ღმერთი [[მარსი (ღმერთი)|მარსი]].
 
 ქალაქის აშენების დროს რემუსმა რომულუსი გააბრაზა, და ამ უკანასკნელმა მოკლა იგი და მარტო დაასრულა ქალაქის მშენებლობა. დამკვიდრებული ტრადიციის მიხედვით ეს [[ძვ. წ. 753]] წელს მოხდა.
 
-ახალ ქალაქში რომულთან ყოველგვარი მაწანწალები შეიკრიბნენ, ვისაც შეეძლო საკუთარი მამის დასახელება ისინი პატრიციუსები გახდნენ, ხოლო ვინც არ იცოდა თავისი წარმომავლობა, ისინი პლებეები. 
+ახალ ქალაქში რომულუსთან ყველა ჯურის მაწანწალა შეიკრიბა, ვინც შეეძლო საკუთარი მამის დასახელება, ისინი პატრიციუსები გახდნენ, ვინც არ იცოდა თავისი წარმომავლობა,- ისინი პლებეები. 
 
-რომულუსმა არაერთი ეტრუსკული ქალაქი დაანგრია და მოსახლეობა რომში გამორეკა. ლეგენდის მიხედვით, რომულის გარდაცვალებისთვის, რომი ძლიერი და მდიდარი ქალაქი იყო. რომის მონარქიის პერიოდის შესახებ როგორც ავღნიშნეთ ზუსტი ისტორიული ცნობები ძალიან მწირია, ამიტომ გვიწევს ლეგენდების მოშველიება.
+რომულუსმა არაერთი ეტრუსკული ქალაქი დაანგრია და მოსახლეობა რომში გამორეკა. ლეგენდის მიხედვით, რომულუსის გარდაცვალებისას, რომი ძლიერი და მდიდარი ქალაქი იყო. როგორც ავღნიშნეთ, რომის მონარქიის პერიოდის შესახებ ზუსტი ისტორიული ცნობები ძალიან მწირია, ამიტომ გვიწევს ლეგენდების მოშველიება.
 
 უძველესი რომის მოსახლეობა იყოფებოდა 300 გვარად, ყოველი 10 გვარი გაერთიანებული იყო კურიად, ხოლო 10 კურია - ტრიბად. ამგვარად სულ 3 ტრიბი იყო.
 
