--- a/რომის_სენატი.mw
+++ b/რომის_სენატი.mw
@@ -3,11 +3,19 @@
 
 ==ისტორია==
 
+{{ესკიზი}}
+
 ===მეფობის პერიოდი===
+
+{{ესკიზი}}
 
 ===რესპუბლიკა===
 
+{{ესკიზი}}
+
 ===იმპერია===
+
+{{ესკიზი}}
 
 ==განაწესი==
 
