/* ნუმა პომპილიუსის წარმოშვება */

--- a/ნუმა_პომპილიუსი.mw
+++ b/ნუმა_პომპილიუსი.mw
@@ -1,16 +1,16 @@
 [[სურათი:Numa pompilius.jpg|thumb|ნუმა პომპილიუსი]]
 '''ნუმა პომპილიუსი''' ''(Numa Pompilius)'' (* [[21 აპრილი]], [[ძვ. წ. 753]] ―   †   [[ძვ. წ. 674]]) - [[რომის სამეფო|რომის]] ლეგენდარული მეორე მეფე.
 
-==ნუმა პომპილიუსის წარმოშვება==
+==ნუმა პომპილიუსის წარმოშობა==
 
 [[სურათი:Numa-pompilius.jpg|thumb|left|ნუმა მუზებს სთხოვს რჩევას]]
-ნუმა პომპილიუსი წარმოშვებით [[საბინელები|საბინელი]] იყო ქალაქ კუროსიდან. როგორ [[პლუტარქე]] გვაუწყებს, იგი რომის დაარსების დღეს დაიბადა. მამამისს პომპონიუსს ოთხი ვაჟი ჰყავდა, ნუმა უმცროსი იყო. ზოგი ანტიკური ავტორი ამტკიცებდა რომ იგი [[პითაგორე|პითაგორეს]] მოსწავლე იყო, მაგრამ პითაგორე ნუმაზე 200 წლით გვიან ცხოვრობდა. [[ტიტუს ლივიუსი]] მიიჩნევს რომ ნუმას მაღალი მორალური თვისებების მიღწევად სრულიად არ ესაჭიროებოდა განათლების უცხოელ ფილოსოფოსტან მიღება, ვინაიდან საბინელები გამოირჩეოდნენ ზნეობით.
+ნუმა პომპილიუსი წარმოშობით [[საბინელები|საბინელი]] იყო ქალაქ კუროსიდან. როგორც [[პლუტარქე]] გვაუწყებს, იგი რომის დაარსების დღეს დაიბადა. მამამისს პომპონიუსს ოთხი ვაჟი ჰყავდა, ნუმა უმცროსი იყო. ზოგი ანტიკური ავტორი ამტკიცებდა რომ იგი [[პითაგორა|პითაგორსას]] მოსწავლე იყო, მაგრამ პითაგორა ნუმაზე 200 წლით გვიან ცხოვრობდა. [[ტიტუს ლივიუსი]] მიიჩნევს რომ ნუმას მაღალი მორალური თვისებების მიღწევად სრულიად არ ესაჭიროებოდა განათლების უცხოელ ფილოსოფოსთან მიღება, ვინაიდან საბინელები გამოირჩეოდნენ ზნეობით.
 
-მის ზნეობრივ პრინციპებზე რომულუსის თანამმართველმა [[ტატიუსი|ტატიუსმაც]] შეიტყო და მიათხოვა ნუმას ერთადერთი ქალიშვილი. მიუხედავად ამისა, იგი არ გადასახლდა რომში, რადგან მშვიდი ცხოვრება ერჩივნა. დაქორწინებიდაც 13 წლის შემდეგ ტატია გარდაიცვალა.
+მის ზნეობრივ პრინციპებზე რომულუსის თანამმართველმა [[ტატიუსი|ტატიუსმაც]] შეიტყო და მიათხოვა ნუმას ერთადერთი ქალიშვილი. მიუხედავად ამისა, იგი არ გადასახლდა რომში, რადგან მშვიდი ცხოვრება ერჩივნა. დაქორწინებიდან 13 წლის შემდეგ ტატია გარდაიცვალა.
 
 დაქვრივების შემდეგ ნუმამ დატოვა ქალაქი და წმინდა ტყეში დასახლდა. ჭორები დადიოდა რომ იგი მუზას შეუყვარდა და იქ ერთად ცხოვრობდნენ. 
 
-ნუმა უკვე ორმოცი წლის იყო, როდესაც რომიდან ელჩები მოვიდნენ მასთან და მეფობა შესთავაზეს. ნუმა ჯერ არ თანხვდებოდა მეფობაზე, მიაჩნდა რომ იგი არ შეეფერებოდა მეომარ ერს. მაგრამ ელჩებმა მოახერხეს მისი დარწმუნება და ნუმა დათანხვდა.
+ნუმა უკვე ორმოცი წლის იყო, როდესაც რომიდან ელჩები მოვიდნენ მასთან და მეფობა შესთავაზეს. ნუმა ჯერ არ თანხმდებოდა მეფობაზე, მიაჩნდა რომ იგი არ შეეფერებოდა მეომარ ერს. მაგრამ ელჩებმა მოახერხეს მისი დარწმუნება და ნუმა დათანხმდა.
 
 ==ნუმას მეფედ არჩევის წინაპირობები==
 
