--- a/ნუმა_პომპილიუსი.mw
+++ b/ნუმა_პომპილიუსი.mw
@@ -14,9 +14,9 @@
 
 ==ნუმას მეფედ არჩევის წინაპირობები==
 
-[[რომულუსი|რომულუსის]] უცნაური სიკვდილის შემდეგ რომში მეფობის კანდიდატი არ იყო, საბინელი და რომაელი სენატორები ვერ თანხვდებოდნენ თუ ვინ უნდა ყოფილიყო რომის მეფე. ერთმანეთის კანდიდატებს კი არ სცნობდნენ. ეს იმით დასრულდა რომ ასი სენატორი ათ-ათ კაციან დაჯგუფებებად გაიყო, თითო დაჯგუფებამ აირჩია მეფე და 5 დღის ვადით მეფობდა ერთი მეფე, შემდეგ კი მეფე მეორე ჯგუფის წარმომადგენელი ხდებოდა. ასე გაგრძელდა დაახლოვებით ერთი წელი. 
+[[რომულუსი|რომულუსის]] უცნაური სიკვდილის შემდეგ რომში მეფობის კანდიდატი არ იყო, საბინელი და რომაელი სენატორები ვერ თანხმდებოდნენ თუ ვინ უნდა ყოფილიყო რომის მეფე. ერთმანეთის კანდიდატებს კი არ სცნობდნენ. ეს იმით დასრულდა რომ ასი სენატორი ათ-ათ კაციან დაჯგუფებებად გაიყო, თითო დაჯგუფებამ აირჩია მეფე და 5 დღის ვადით მეფობდა ერთი მეფე, შემდეგ კი მეფე მეორე ჯგუფის წარმომადგენელი ხდებოდა. ასე გაგრძელდა დაახლოვებით ერთი წელი. 
 
-უბრალო ხალხს ეს არ მოეწონა, ერთი ბატონის მაგივრად მათ ასი ბატონი მიიღეს. ხალხმა განაცხადა რომ აწი მეფის გარდა არავის აღარ დაემორჩილებოდნენ, ამიტომ სენატორებმა გადაწყვიტეს შეკრება რათა აერჩიათ მეფე. საბინელებმა ნუმა პომპილიუსის კანდიდატურა წამოაყენეს. ნუმა ცნობილი იყო არა მარტო მაღალი მორალური თვისებებით, არამედ საღვთო და საერო კანონებში განსწავლულობით. რომაელებმა ნუმას კანდინატურას ვერავინ ვერ დაუპირისპირეს და დათანხვდნენ.
+უბრალო ხალხს ეს არ მოეწონა, ერთი ბატონის მაგივრად მათ ასი ბატონი მიიღეს. ხალხმა განაცხადა რომ აწი მეფის გარდა არავის აღარ დაემორჩილებოდნენ, ამიტომ სენატორებმა გადაწყვიტეს შეკრება რათა აერჩიათ მეფე. საბინელებმა ნუმა პომპილიუსის კანდიდატურა წამოაყენეს. ნუმა ცნობილი იყო არა მარტო მაღალი მორალური თვისებებით, არამედ საღვთო და საერო კანონებში განსწავლულობით. რომაელებმა ნუმას კანდინატურას ვერავინ ვერ დაუპირისპირეს და დათანხმდნენ.
 
 ==ნუმას მმართველობა==
 
