/* ძვ. წ. IV საუკუნე */

--- a/რომის_რესპუბლიკის_კონსულების_სია.mw
+++ b/რომის_რესპუბლიკის_კონსულების_სია.mw
@@ -206,6 +206,14 @@
 
 ==ძვ. წ. IV საუკუნე==
 
+[[ძვ. წ. 394|394]] კამილუსის პირველი დიქტატურა
+
+[[ძვ. წ. 393|393]] ლ. ვალერიუს ლ.ფ. პოტიტუსი, პ.? (ან სერ.) კორნელიუს მალუგინენსისი, ლ. ლუკრეციუს ტრიციპიტინუს ფლავიუსი, სერვიუს სულპიციუს ქ. ფ. კამერინუსი
+
+[[ძვ. წ. 392|392]] ლ. ვალერიუს ლ.ფ. პოპიტუსი, პ.? (ან სერ.) კორნელიუს მალუგინენსისი, ლ. ლუკრეციუს ტრიციპიტინუს ფლავიუსი, სერვიუს სულპიციუს ქ. ფ. კამერინუსი
+
+[[ძვ. წ. 391|391]] ლ. ვალერიუს ლ.ფ. პოპიტუსი, პ.? (ან სერ.) კორნელიუს მალუგინენსისი, ლ. ლუკრეციუს ტრიციპიტინუს ფლავიუსი, სერვიუს სულპიციუს ქ. ფ. კამერინუსი
+
 {{ესკიზი}}
 
 ==ძვ. წ. III საუკუნე==
