/* ძვ. წ. IV საუკუნე */

--- a/რომის_რესპუბლიკის_კონსულების_სია.mw
+++ b/რომის_რესპუბლიკის_კონსულების_სია.mw
@@ -206,13 +206,17 @@
 
 ==ძვ. წ. IV საუკუნე==
 
-[[ძვ. წ. 394|394]] კამილუსის პირველი დიქტატურა
+[[ძვ. წ. 394|394]] - კამილუსის პირველი დიქტატურა
 
-[[ძვ. წ. 393|393]] ლ. ვალერიუს ლ.ფ. პოტიტუსი, პ.? (ან სერ.) კორნელიუს მალუგინენსისი, ლ. ლუკრეციუს ტრიციპიტინუს ფლავიუსი, სერვიუს სულპიციუს ქ. ფ. კამერინუსი
+[[ძვ. წ. 393|393]] - ლ. ვალერიუს ლ.ფ. პოტიტუსი, პ.? (ან სერ.) კორნელიუს მალუგინენსისი, ლ. ლუკრეციუს ტრიციპიტინუს ფლავიუსი, სერვიუს სულპიციუს ქ. ფ. კამერინუსი
 
-[[ძვ. წ. 392|392]] ლ. ვალერიუს ლ.ფ. პოპიტუსი, პ.? (ან სერ.) კორნელიუს მალუგინენსისი, ლ. ლუკრეციუს ტრიციპიტინუს ფლავიუსი, სერვიუს სულპიციუს ქ. ფ. კამერინუსი
+[[ძვ. წ. 392|392]] - ლ. ვალერიუს ლ.ფ. პოპიტუსი, პ.? (ან სერ.) კორნელიუს მალუგინენსისი, ლ. ლუკრეციუს ტრიციპიტინუს ფლავიუსი, სერვიუს სულპიციუს ქ. ფ. კამერინუსი
 
-[[ძვ. წ. 391|391]] ლ. ვალერიუს ლ.ფ. პოპიტუსი, პ.? (ან სერ.) კორნელიუს მალუგინენსისი, ლ. ლუკრეციუს ტრიციპიტინუს ფლავიუსი, სერვიუს სულპიციუს ქ. ფ. კამერინუსი
+[[ძვ. წ. 391|391]] - ლ. ვალერიუს ლ.ფ. პოპიტუსი, პ.? (ან სერ.) კორნელიუს მალუგინენსისი, ლ. ლუკრეციუს ტრიციპიტინუს ფლავიუსი, სერვიუს სულპიციუს ქ. ფ. კამერინუსი
+
+[[ძვ. წ. 390|390]] - ლ. ვალერიუს ლ.ფ. პოპიტუსი II, მარკუს მანილუს ტ.ფ., შემდგომში სამხედრო ტრიბუნი ივლისის კალენდების შემდეგ, ლ. ლუკრეციუსი, სერვიუს სულპიციუსი, მ. აიმულუისი, ლ. ფურიუს მედულინუსი VII, აგრიპა ფურიუსი, კ. ამილიუსი II
+
+
 
 {{ესკიზი}}
 
