/* ძვ. წ. IV საუკუნე */

--- a/რომის_რესპუბლიკის_კონსულების_სია.mw
+++ b/რომის_რესპუბლიკის_კონსულების_სია.mw
@@ -214,7 +214,21 @@
 
 [[ძვ. წ. 391|391]] - ლ. ვალერიუს ლ.ფ. პოპიტუსი, პ.? (ან სერ.) კორნელიუს მალუგინენსისი, ლ. ლუკრეციუს ტრიციპიტინუს ფლავიუსი, სერვიუს სულპიციუს ქ. ფ. კამერინუსი
 
-[[ძვ. წ. 390|390]] - ლ. ვალერიუს ლ.ფ. პოპიტუსი II, მარკუს მანილუს ტ.ფ., შემდგომში სამხედრო ტრიბუნი ივლისის კალენდების შემდეგ, ლ. ლუკრეციუსი, სერვიუს სულპიციუსი, მ. აიმულუისი, ლ. ფურიუს მედულინუსი VII, აგრიპა ფურიუსი, კ. ამილიუსი II
+[[ძვ. წ. 390|390]] - ლ. ვალერიუს ლ.ფ. პოპიტუსი II, მარკუს მანილუს ტ.ფ., შემდგომში სამხედრო ტრიბუნი. ივლისის კალენდების შემდეგ: ლ. ლუკრეციუსი, სერვიუს სულპიციუსი, მ. აიმულუისი, ლ. ფურიუს მედულინუსი VII, აგრიპა ფურიუსი, კ. ამილიუსი II
+
+[[ძვ. წ. 389|389]] - სამხედრო ტრიბუნები
+
+[[ძვ. წ. 388|388]] - დიქტატორი მ. ფურიუს კამილუსი, შემდეგ სამხედრო ტრიბუნები ლ. ვალერიუს პუბლიკოლა II, ლ. ვირგინიუსი, პ. კორნელიუს, ა. მანლიუსი, ლ. ამილიუსი, ლ. პოსტუმიუსი
+
+[[ძვ. წ. 387|387]] - სამხედრო ტრიბუნები ტ. კინტიუს ცინცინატუსი, ქ. სერვილიუს ფიდენასი V, ლ. იულიუს ტრეციპიტინუსი, სერვიუს სულპიციუს რუფუსი
+
+[[ძვ. წ. 386|386]] - სამხედრო ტრიბუნები ლ. პაპირიუსი, კ. სერგიუსი, ლ. ამილიუსი II, ლ. მენენიუსი, ლ. პუბლიკოლა III
+
+[[ძვ. წ. 385|385]] - სამხედრო ტრიბუნები მ. ფურიუს კამილუსი, სერვიუს კორნელიუს მალუგინესისი, ქ. სერვილიუს ფიდენასი VI, ლ. კინტიუს ცონცინატუსი (II?), ლ. ჰორაციუსი, ტ. ვალერიუსი ([[382]] წლამდე ესენი მმართველობდნენ).
+
+[[ძვ. წ. 381|381]] - სამხედრო ტრიბუნები სერვიუს კორნელიუს მალუგინესისი IV, ქ. სერვილიუსი, სერვილიუს სულპიციუსი, ლ. ამილიუსი IV
+
+[[ძვ. წ. 380|380]] - სამხედრო ტრიბუნები მ. ფურიუს კამილუსი VII, ა. და ლ. პოსტუმიუს რეგილუსები, ლ. ფურიუსი, ლ. ლუკრეციუსი, მ. ფაბიუს ამბუსტუსი
 
 
 
